; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_content_filter.c_cfil_udp_gc_thread_sleep.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_content_filter.c_cfil_udp_gc_thread_sleep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cfil_sock_udp_attached_count = common dso_local global i32 0, align 4
@THREAD_INTERRUPTIBLE = common dso_local global i32 0, align 4
@UDP_FLOW_GC_RUN_INTERVAL_NSEC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @cfil_udp_gc_thread_sleep to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cfil_udp_gc_thread_sleep(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = load i32, i32* @THREAD_INTERRUPTIBLE, align 4
  %8 = call i32 @assert_wait(i32 ptrtoint (i32* @cfil_sock_udp_attached_count to i32), i32 %7)
  br label %17

9:                                                ; preds = %1
  store i32 0, i32* %3, align 4
  %10 = load i32, i32* @UDP_FLOW_GC_RUN_INTERVAL_NSEC, align 4
  %11 = call i32 @nanoseconds_to_absolutetime(i32 %10, i32* %3)
  %12 = load i32, i32* %3, align 4
  %13 = call i32 @clock_absolutetime_interval_to_deadline(i32 %12, i32* %3)
  %14 = load i32, i32* @THREAD_INTERRUPTIBLE, align 4
  %15 = load i32, i32* %3, align 4
  %16 = call i32 @assert_wait_deadline(i32* @cfil_sock_udp_attached_count, i32 %14, i32 %15)
  br label %17

17:                                               ; preds = %9, %6
  ret void
}

declare dso_local i32 @assert_wait(i32, i32) #1

declare dso_local i32 @nanoseconds_to_absolutetime(i32, i32*) #1

declare dso_local i32 @clock_absolutetime_interval_to_deadline(i32, i32*) #1

declare dso_local i32 @assert_wait_deadline(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
